# dataset-maker

./: CHANGELOG_RTX6000.md  CUDA_STATUS_REPORT.md  FIX_STARTUP_BADALLOC.md  FIX_SUMMARY.md  GPU_ARCHITECTURE_GUIDE.md  MULTI_GPU_GUIDE.md  README.md  RESUMEN_FINAL.md  SOLUCION_FINAL_CUDA.md  config_manager.py  emilia_pipeline.py  fix_ctranslate2_cudnn.sh  gpu_manager.py  gpu_presets.py  gradio_interface.py  performance_logger.py  pyproject.toml  quick_test.py  safe_globals.py  setup_cuda_env.py  setup_onnx_cuda.py  system_health_checker.py  test_complete_workflow.py  test_end_to_end.py  test_functionality.py  test_simple_end_to_end.py  test_whisperx_cuda.py  test_whisperx_cuda_full.py  transcriber.py  verify_installation.py  wsl_setup.md
Emilia/models/: whisper_asr.py
